// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the Matrix component 1`] = `
<table
  class="matrix"
>
  <tbody>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        articles
      </td>
      <td
        class="items"
      >
        <div
          class="item"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item"
          title="Edit"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <div
          class="item"
          title="Delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          Activate all
        </button>
      </td>
    </tr>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        redirects
      </td>
      <td
        class="items"
      >
        <div
          class="item"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <button
          class="rowButton"
        >
          Activate all
        </button>
      </td>
    </tr>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        settings
      </td>
      <td
        class="items"
      >
        <div
          class="item"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item"
          title="Edit"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <button
          class="rowButton"
        >
          Activate all
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render the Matrix component with values 1`] = `
<table
  class="matrix"
>
  <tbody>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        articles
      </td>
      <td
        class="items"
      >
        <div
          class="item selected"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected"
          title="Edit"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <div
          class="item"
          title="Delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
        <button
          class="rowButton"
        >
          Deactivate all
        </button>
      </td>
    </tr>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        redirects
      </td>
      <td
        class="items"
      >
        <div
          class="item selected"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <button
          class="rowButton"
        >
          Deactivate all
        </button>
      </td>
    </tr>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        settings
      </td>
      <td
        class="items"
      >
        <div
          class="item selected"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item"
          title="Edit"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <button
          class="rowButton"
        >
          Deactivate all
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render the Matrix component with values in disabled state 1`] = `
<table
  class="matrix disabled"
>
  <tbody>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        articles
      </td>
      <td
        class="items"
      >
        <div
          class="item selected disabled"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item selected disabled"
          title="Edit"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
        <div
          class="item disabled"
          title="Delete"
        >
          <span
            aria-label="su-trash-alt"
            class="su-trash-alt"
          />
        </div>
      </td>
    </tr>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        redirects
      </td>
      <td
        class="items"
      >
        <div
          class="item selected disabled"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
      </td>
    </tr>
    <tr
      class="row"
    >
      <td
        class="name"
      >
        settings
      </td>
      <td
        class="items"
      >
        <div
          class="item selected disabled"
          title="View"
        >
          <span
            aria-label="su-pen"
            class="su-pen"
          />
        </div>
        <div
          class="item disabled"
          title="Edit"
        >
          <span
            aria-label="su-plus"
            class="su-plus"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
